k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web-app
  namespace: python-web-app-ns  # Add this line
  labels:
    app: python-web-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-web-app
  template:
    metadata:
      labels:
        app: python-web-app
    spec:
      containers:
      - name: python-web-app
        image: mouss1959/flask-app:1.0.5  # Replace with your Docker image
        ports:
        - containerPort: 5001
