k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-web-app-service
  namespace: python-web-app-ns
  labels:
    app: python-web-app
spec:
  type: NodePort  # Change this from ClusterIP to NodePort
  ports:
  - port: 5001    # Port exposed internally within the cluster
    targetPort: 5001  # Port on the Pods that the Service targets
    nodePort: 30001   # Optional: Specify a port in the range 30000-32767
  selector:
    app: python-web-app
